# aws-rag-kb

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
api/: Dockerfile  README.md  main.py
bedrag/: __init__.py  aws.py  kb.py  rag.py  request.py  s3.py  utils.py
bedrag/models/: models.py
docs/: 01.prefacce.md  02.local.md  03.aws_state.md  04.aws_rag.md  05.datasource.md  06.aws_api.md  07.misc.md  08.afterword.md  README.md
scraper/: README.md  items.py  pipelines.py  settings.py
scraper/docs/: scraper.drawio
scraper/spiders/: ncacfaq_spider.py
tofu/admin/: .terraform.lock.hcl  README.md  main.tf  variables.tf
tofu/admin/docs/: admin.drawio
tofu/modules/apigw/: README.md  domain.tf  functions.tf  logformat.json  logging.tf  main.tf  outputs.tf  roles.tf  variables.tf
tofu/modules/apigw/docs/: apigw.drawio
tofu/modules/aurora/: README.md  main.tf  outputs.tf  secrets.tf  variables.tf
tofu/modules/aurora/docs/: aurora.drawio
tofu/modules/bedrock/: data_source.tf  main.tf  outputs.tf  roles.tf  variables.tf
tofu/modules/bedrock/docs/: bedrock.drawio
tofu/modules/ecr/: main.tf  outputs.tf  variables.tf
tofu/modules/saving/: main.tf  variables.tf
tofu/modules/tfstate/: main.tf  variables.tf
tofu/modules/tools/: logging.tf  main.tf  outputs.tf  roles.tf  variables.tf
tofu/modules/vpc/: README.md  main.tf  outputs.tf  variables.tf
tofu/modules/vpc/docs/: vpc.drawio
tofu/rag/: main.tf  outputs.tf  variables.tf
tofu/rag/conf/: field_mapping.json
