[tool.poetry]
name = "aws-rag-kb"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
boto3 = "^1.34.153"
fastapi = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
