[tool.poetry]
name = "bedrag"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
boto3 = "^1.34.153"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.31"
pgvector = "^0.3.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
