[tool.poetry]
name = "bedrag"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
boto3 = "^1.34.153"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.31"
pgvector = "^0.3.2"
psycopg2-binary = "^2.9.9"
scrapy = "^2.11.2"
markdownify = "^0.13.1"
langchain = "^0.2.12"
langchainhub = "^0.1.20"
langchain-aws = "^0.1.15"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    "test.py",
    "tests",
    ".venv",
    ".env",
    "venv",
    "env",
]
src = ["es"]

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = []
exclude = ["migrations"]

fixable = ["ALL"]
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
#"**/migrations/*.py" = ["F401"]
"__init__.py" = ["E402", "D104", "F403"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
case-sensitive = true
split-on-trailing-comma = false
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "sqlalchemy",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"sqlalchemy" = ["sqlalchemy"]